# COre-GOLIAF

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  NOTICE  README.md
.github/workflows/: ci.yml  license-compliance.yml  release-notice.yml
assets/: level1.scene
assets/scenes/: default.scene  level1.scene.json
assets/scripts/: player.lua  rotate.lua
assets/shaders/: simple.frag  simple.vert
ci/: coverage_stub.py  perf_budgets.json  perf_check.py  perf_trend.py  replay_test.py  run_checks.py
config/: server.txt
docs/: ENGINE_IMPLEMENTATION.md  ENGINE_ROADMAP_RU.md  MVP_SCOPE.md  NOTICE_PROCESS.md  THIRD_PARTY_LICENSES.md  hot_reload_strategy.md  networking.md
editor/level_editor/: README.md
editor/menu_editor/: README.md
engine/audio/: AudioEngine.cpp  AudioEngine.h  AudioStub.cpp  AudioStub.hpp
engine/core/: Application.cpp  Application.h  Logger.cpp  Logger.h  Timer.cpp  Timer.h  Window.cpp  Window.h
engine/ecs/: Component.h  EcsWorld.cpp  EcsWorld.h  Entity.h  System.h
engine/physics/: PhysicsEngine.cpp  PhysicsEngine.h  PhysicsStub.cpp  PhysicsStub.hpp
engine/renderer/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  RendererStub.cpp  RendererStub.hpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h
engine/scene/: Scene.h  SceneLoader.cpp  SceneLoader.h  SceneSerializer.cpp  SceneSerializer.h
include/: goliaf_module_api.h
include/assets/: pipeline.hpp
include/audio/: audio_engine.hpp
include/core/: AssetCompiler.hpp  AudioSystem.hpp  EcsWorld.hpp  Engine.hpp  LevelEditor.hpp  MenuEditor.hpp  PhysicsSystem.hpp  Renderer.hpp  application.hpp
include/ecs/: ecs_world.hpp  scene_loader.hpp
include/editor/: level_editor.hpp  menu_editor.hpp
include/network/: server.hpp
include/physics/: physics_world.hpp
include/render/: opengl_renderer.hpp
include/scripting/: lua_runtime.hpp
legal/: NOTICE.template
scripts/: update_notice.py  validate_licenses.py
shaders/: default.glsl
src/: AudioManager.cpp  AudioManager.h  InputManager.cpp  InputManager.h  PhysicsSystem.cpp  PhysicsSystem.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  dev_main.cpp  main.cpp  module_loader.c  player_main.cpp  server_main.cpp
src/app/: dev_main.cpp  player_main.cpp  server_main.cpp
src/apps/: dev_main.cpp  player_main.cpp  server_main.cpp
src/assets/: pipeline.cpp
src/audio/: AudioSystem.cpp  audio_engine.cpp
src/core/: Application.cpp  Application.h  Input.cpp  Input.h  Logger.cpp  Logger.h  Timer.cpp  Timer.h  WindowGLFW.cpp  WindowGLFW.h  application.cpp
src/dev/: AssetPipeline.cpp  AssetPipeline.h  main.cpp
src/dev/debug/: DebugTools.cpp  DebugTools.h
src/dev/editor/: Editor.cpp  Editor.h
src/dev/level_editor/: LevelEditor.cpp  LevelEditor.h
src/dev/menu_editor/: MenuEditor.cpp  MenuEditor.h
src/ecs/: Component.cpp  Component.h  EcsWorld.cpp  Entity.cpp  Entity.h  Registry.cpp  Registry.h  System.cpp  System.h  ecs_world.cpp  scene_loader.cpp
src/editor/: EditorApp.cpp  EditorApp.h  ImGuiIntegration.cpp  ImGuiIntegration.h  level_editor.cpp  menu_editor.cpp
src/editor/level_editor/: LevelEditor.cpp
src/editor/menu_editor/: MenuEditor.cpp
src/engine/: Engine.cpp
src/engine/audio/: AudioStub.cpp  AudioStub.h
src/engine/physics/: PhysicsStub.cpp  PhysicsStub.h
src/engine/renderer/: RendererStub.cpp  RendererStub.h
src/network/: NetworkClient.cpp  NetworkClient.h  NetworkTypes.h  TcpServer.cpp  TcpServer.h  server.cpp
src/physics/: PhysicsSystem.cpp  physics_world.cpp
src/player/: main.cpp
src/render/: Renderer.cpp  opengl_renderer.cpp
src/renderer/: Camera.cpp  Camera.h  GLUtils.cpp  GLUtils.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/scene/: Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h
src/scripting/: LuaVM.cpp  LuaVM.h  ScriptComponent.cpp  ScriptComponent.h  lua_runtime.cpp
src/server/: ClientConnection.h  NetworkServer.cpp  NetworkServer.h  Packet.h  main.cpp
src/tools/: AssetCompiler.cpp
tests/: test_DevEditor.cpp  test_Physics.cpp  test_Renderer.cpp  test_ResourceManager.cpp  test_Scene.cpp
